tests/custom/STARIS_2022/operation-type-errors/product-type-error-01/stderr.expected
Error:
    Parser error in file: product-type-error.essence Error is:
ValidatorError product-type-error.essence:2:23:
  |
2 | such that i = product(5)
  |                       ^
Type error:
	Expected:"Matrix or Set"
	Got: int

